Fixed the tab order and content page alignment

--- a/src/app/day-details-modal/day-details-modal.component.scss
+++ b/src/app/day-details-modal/day-details-modal.component.scss
@@ -24,3 +24,7 @@
   color: orange;
   font-weight: bold;
 }
+
+.calendar-data {
+  font-size: 0.9em; // Using relative size
+}
